--- a/kb-articles/kb-types_desk_phones.html
+++ b/kb-articles/kb-types_desk_phones.html
@@ -1,225 +1,333 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-	<meta charset="utf-8">
- 	<meta http-equiv="X-UA-Compatible" content="IE=edge">
- 	<meta name="viewport" content="width=device-width, initial-scale=1">
-	<link href="//maxcdn.bootstrapcdn.com/bootstrap/3.3.4/css/bootstrap.min.css" rel="stylesheet">
+ <meta charset="utf-8">
+ <meta http-equiv="X-UA-Compatible" content="IE=edge">
+ <meta name="viewport" content="width=device-width, initial-scale=1">
+ <title>ITS KBA 84556 Types of Desk Phones</title>
+ <link href="//maxcdn.bootstrapcdn.com/bootstrap/3.3.4/css/bootstrap.min.css" rel="stylesheet">
 
-		<style>
-		h2 { padding-top: 30px; }
-		h3 { padding-top: 20px; }
-		</style>
+  <style>
+  h2 { padding-top: 30px; }
+  h3 { padding-top: 20px; }
+  </style>
 
-	<script src="//maxcdn.bootstrapcdn.com/bootstrap/3.3.4/js/bootstrap.min.js"></script>
+  <script src="//maxcdn.bootstrapcdn.com/bootstrap/3.3.4/js/bootstrap.min.js"></script>
+
 </head>
+
 <body>
-<div class="container"><!DOCTYPE html>
-<html lang="en">
-<span><!-- navigation object : Page Name template -->ITS KBA 84556 Types Of Desk Phones</span>
-</section>
-</div>
-</div>
-  
-<div class='displayNone'><!-- navigation object : Breadcrumbs hidden template -->
-  <div class="breadcrumb col-xs-12 col-sm-12 col-md-12 col-lg-12">
-    <!-- navigation object : Home Link template --><a href='SiteManager?ctfn=publish&amp;fnno=30&amp;chid=144&amp;lang=en&amp;sid=27574'><img src='https://webcms.case.edu/terminalfour/SiteManager?ctfn=download&amp;fnno=60&amp;ceid=1620857369' alt="Go to Home" /></a><!-- navigation object : Breadcrumbs Template --> > <a href="SiteManager?ctfn=publish&amp;fnno=30&amp;sid=27574&amp;chid=144&amp;lang=en">ITS</a> > <a href="SiteManager?ctfn=publish&amp;fnno=30&amp;sid=41906&amp;chid=144&amp;lang=en">ITS Development</a> > <a href="SiteManager?ctfn=publish&amp;fnno=30&amp;sid=67312&amp;chid=144&amp;lang=en">rpretzer</a> > <a href="SiteManager?ctfn=publish&amp;fnno=30&amp;sid=67341&amp;chid=144&amp;lang=en">KBA</a> > <a href="SiteManager?ctfn=publish&amp;fnno=30&amp;sid=67461&amp;chid=144&amp;lang=en">ITS KBA 84556 Types Of Desk Phones</a>
-  </div><!-- .breadcrumb -->
-</div>
-  
-  
-  <div class="col-xs-12 col-sm-12 col-md-12 col-lg-12 main-col">
-    
-    <div class="row"><a id="d.en.200638"></a>
 
 
-<div class='tinyMCE noLine  col-xs-12 col-sm-12 col-md-12 col-lg-12' >
-<a class="anchor" name="200638"></a>
-<h3>Types of Desk Phones</h3>
-  
 
-  
+FAQ:
+
+
+
+
+
+
+
+
+
+Where is my MAC Address located?
+What is the pricing for CWRU ITS hardware and setup fees?
+Telephone Services Rates
+What are the costs for accessories or new phones? 
+What does Centrex Analog mean?
+What does VOIP Analog Mean?
+What does VOIP mean?
+
+
+
+
+
+
+
+<h2>Telephone Hardware and Parts Descriptions</h2>
 <h4>Model 7942G</h4>
-<table border="0">
-<tbody>
-<tr>
-<td align="left" width="25%">&nbsp;<span class='fig-img-' style=""><img class="fig-img" src="https://webcms.case.edu/terminalfour/SiteManager?ctfn=download&amp;fnno=60&amp;ceid=753191943"  /></span></td>
-<td align="left" width="25%">
 <p>This phone is the standard phone for full-time faculty and staff.</p>
-<p>&nbsp;</p>
+ 
 <ul>
-<li>Two-line set</li>
-<li>Hands free speakerphone</li>
-<li>Large LCD display</li>
-<li>Headset jack</li>
-<li>Volume control</li>
-<li>Message waiting light</li>
+  <li>Two-line set</li>
+  <li>Hands free speakerphone</li>
+  <li>Large LCD display</li>
+  <li>Headset jack</li>
+  <li>Volume control</li>
+  <li>Message waiting light</li>
 </ul>
-</td>
-</tr>
-</tbody>
-</table>
+
 <h4>Model 7945G</h4>
-<table border="0">
-<tbody>
-<tr>
-<td align="left" width="25%">&nbsp;<span class='fig-img-' style=""><img class="fig-img" src="https://webcms.case.edu/terminalfour/SiteManager?ctfn=download&amp;fnno=60&amp;ceid=1336125936"  /></span></td>
-<td align="left" width="25%">
-<ul id="l4">
-<li>High-fidelity wideband audio for vibrant, lifelike conversations; Internet Low Bitrate Codec (iLBC) support for use in lossy networks</li>
-<li>Large backlit color display for easy use of Cisco Unified Communications and third- party telephone applications</li>
-<li>Improved navigation cluster for easier navigation and feature and function selection</li>
-<li>Gigabit Ethernet connectivity</li>
+
+<ul>
+  <li>High-fidelity wideband audio for vibrant, lifelike conversations; Internet Low Bitrate Codec (iLBC) support for use in lossy networks</li>
+  <li>Large backlit color display for easy use of Cisco Unified Communications and third- party telephone applications</li>
+  <li>Improved navigation cluster for easier navigation and feature and function selection</li>
+  <li>Gigabit Ethernet connectivity</li>
 </ul>
-</td>
-</tr>
-</tbody>
-</table>
+
 <h4>Model 7962G</h4>
-<table border="0">
-<tbody>
-<tr>
-<td align="left" width="25%">&nbsp;<span class='fig-img-' style=""><img class="fig-img" src="https://webcms.case.edu/terminalfour/SiteManager?ctfn=download&amp;fnno=60&amp;ceid=362542223"  /></span></td>
-<td align="left" width="25%">
-<ul id="l">
-<li>Six-line set</li>
-<li>Hands free speakerphone</li>
-<li>Large LCD display</li>
-<li>Headset jack</li>
-<li>Volume control</li>
-<li>Message waiting light</li>
+
+<ul>
+  <li>Six-line set</li>
+  <li>Hands free speakerphone</li>
+  <li>Large LCD display</li>
+  <li>Headset jack</li>
+  <li>Volume control</li>
+  <li>Message waiting light</li>
 </ul>
-</td>
-</tr>
-</tbody>
-</table>
+
 <h4>Model 7965G</h4>
-<table border="0">
-<tbody>
-<tr>
-<td align="left" width="25%">&nbsp;<span class='fig-img-' style=""><img class="fig-img" src="https://webcms.case.edu/terminalfour/SiteManager?ctfn=download&amp;fnno=60&amp;ceid=1792963752"  /></span></td>
-<td align="left" width="25%">
-<ul id="l5">
-<li>High-fidelity wideband audio for vibrant, lifelike conversations; Internet Low Bitrate Codec (iLBC) support for use in lossy networks</li>
-<li>Large backlit color display for easy use of Cisco Unified Communications and third-party telephone applications</li>
-<li>Improved navigation cluster for easier navigation and feature and function selection</li>
-<li>Gigabit Ethernet connectivity</li>
-</ul>
-</td>
-</tr>
-</tbody>
-</table>
-<h4>Model 7937</h4>
-<table border="0">
-<tbody>
-<tr>
-<td align="left" width="25%">&nbsp;<span class='fig-img-' style=""><img class="fig-img" src="https://webcms.case.edu/terminalfour/SiteManager?ctfn=download&amp;fnno=60&amp;ceid=1617093819"  /></span></td>
-<td align="left" width="25%">
+
 <ul>
-<li>Hands free speakerphone</li>
-<li>Single-line set</li>
-<li>Full duplex</li>
-<li>Suitable for small to medium sized conference rooms</li>
-<li>Optional microphone kit ($220.50) for large conference rooms</li>
-<li><strong>Model 7937 must be ordered from the vendor</strong></li>
+  <li>High-fidelity wideband audio for vibrant, lifelike conversations; Internet Low Bitrate Codec (iLBC) support for use in lossy networks</li>
+  <li>Large backlit color display for easy use of Cisco Unified Communications and third-party telephone applications</li>
+  <li>Improved navigation cluster for easier navigation and feature and function selection</li>
+  <li>Gigabit Ethernet connectivity</li>
 </ul>
-</td>
-</tr>
-</tbody>
-</table>
-<h4>Model 7970G</h4>
-<table border="0">
-<tbody>
-<tr>
-<td align="left" width="25%">&nbsp;<span class='fig-img-' style=""><img class="fig-img" src="https://webcms.case.edu/terminalfour/SiteManager?ctfn=download&amp;fnno=60&amp;ceid=2026372494"  /></span></td>
-<td align="left" width="25%">
+
+<h4>Cisco Unified IP Conference Phone 8831</h4>
+
 <ul>
-<li>Eight-line set</li>
-<li>Color touch-screen display</li>
-<li>Hands free speakerphone</li>
-<li>Headset jack</li>
-<li>Volume control</li>
-<li>Message waiting light</li>
+  <li>Hands free speakerphone</li>
+  <li>Full duplex</li>
+  <li>Suitable for small to medium sized conference rooms</li>
+  <li>Larger conference rooms may require daisy-chaining of base units (up to two maximum)</li>
+  <li>Ethernet 10/100</li>
+  <li>SIP</li>
+  <li>Supports 2 External Wired or Wireless Microphones</li>
+  <li>1 Year Warranty</li>
 </ul>
-</td>
-</tr>
-</tbody>
-</table>
+
+<h4>Handset Cord</h4>
+ 
+<ul>
+  <li>2 FT Coiled 12 Ft Uncoiled</li>
+  <li>RJ22</li>
+  <li>Gold Plated Contacts</li>
+  <li>PVC Jacket</li>
+  <li>UL Listed</li>
+  <li>Medium Gray</li>
+</ul>
+
 <h4>Model 7914 Expansion Module</h4>
-<table border="0">
-<tbody>
-<tr>
-<td align="left" width="25%">&nbsp;<span class='fig-img-' style=""><img class="fig-img" src="https://webcms.case.edu/terminalfour/SiteManager?ctfn=download&amp;fnno=60&amp;ceid=709174318"  /></span></td>
-<td align="left" width="25%">
+
 <ul>
-<li>Adds fourteen buttons for either additional lines or speed dial numbers</li>
-<li>Includes new base and power cord</li>
-<li>Up to two expansion modules can be added to a 7960</li>
-<li><strong>Model 7937 must be ordered from the vendor</strong></li>
+  <li>Adds fourteen buttons for either additional lines or speed dial numbers</li>
+  <li>Includes new base and power cord</li>
+  <li>Up to two expansion modules can be added to a 7960</li>
+  <li>Model 7937 must be ordered from the vendor</li>
 </ul>
-</td>
-</tr>
-</tbody>
-</table>
-<h4>Analog Telephone Adapter 186</h4>
-<table border="0">
-<tbody>
-<tr>
-<td align="left" width="25%">&nbsp;<span class='fig-img-' style=""><img class="fig-img" src="https://webcms.case.edu/terminalfour/SiteManager?ctfn=download&amp;fnno=60&amp;ceid=441994310"  /></span></td>
-<td align="left" width="25%">
+
+<h4>Linksys SE1500 5 Port Fast Ethernet Switch</h4>
+
 <ul>
-<li>Allows an analog and an IP phone to share the same faceplate</li>
+  <li>Linksys SE1500 10/100 5 Port Switch includes power adapter.</li>
+  <li>The SE1500 5 Port Switch is the easiest, most flexible way to boost your network's performance while migrating to the power of Fast Ethernet.</li>
+  <li>Designed to meet the needs of small businesses, medium businesses and SOHO networks.</li>
 </ul>
-<p>A - analog phone/fax <br /> B - IP connection <br /> C - power cord socket</p>
-</td>
-</tr>
-</tbody>
-</table>
-<h4>Linksys EZXS55W Etherfast Switch</h4>
-<table border="0">
-<tbody>
-<tr>
-<td align="left" width="25%">&nbsp;<span class='fig-img-' style=""><img class="fig-img" src="https://webcms.case.edu/terminalfour/SiteManager?ctfn=download&amp;fnno=60&amp;ceid=1397738184"  /></span></td>
-<td align="left" width="25%">
-<ul>
-<li>Linksys EZXS55W Etherfast 10/100 5 port auto- sensing switch includes power adapter.</li>
-<li>The EtherFast 10/100 5-Port Switch is the easiest, most flexible way to boost your network's performance while migrating to the power of Fast Ethernet.</li>
-<li>Designed to meet the needs of small businesses, medium businesses and SOHO networks.</li>
-</ul>
-</td>
-</tr>
-</tbody>
-</table>
+
 <h4>Cisco Unified Wideband Handset</h4>
-<table border="0">
-<tbody>
-<tr>
-<td align="left" width="25%">&nbsp;<span class='fig-img-' style=""><img class="fig-img" src="https://webcms.case.edu/terminalfour/SiteManager?ctfn=download&amp;fnno=60&amp;ceid=1468213899"  /></span></td>
-<td align="left" width="25%">
+
 <ul>
-<li>Enhanced audio experience makes communications more intelligible and comfortable for the user.</li>
-<li>Sold as an accessory that can be installed on Cisco Unified IP Phone 7906G, 7911G, 7941G, 7942G, 7945G, 7941G-GE, 7961G, 7961G-GE, 7962G, 7965G, 7970G, and 7971G-GE, 7975G models.</li>
+  <li>Enhanced audio experience makes communications more intelligible and comfortable for the user.</li>
+  <li>Sold as an accessory that can be installed on Cisco Unified IP Phone 7906G, 7911G, 7941G, 7942G, 7945G, 7941G-GE, 7961G, 7961G-GE, 7962G, 7965G, 7970G, and 7971G-GE, 7975G models.</li>
 </ul>
-</td>
-</tr>
-</tbody>
-</table>
+
 <h4>Power Supply</h4>
-<table border="0">
-<tbody>
-<tr>
-<td align="left" width="25%">&nbsp;<span class='fig-img-' style=""><img class="fig-img" src="https://webcms.case.edu/terminalfour/SiteManager?ctfn=download&amp;fnno=60&amp;ceid=1143463171"  /></span></td>
-<td align="left" width="25%">
+
 <ul>
-<li>Replacement power supply for most Cisco CP- 79XX series IP phones.</li>
-<li>Compatible models include 7902G, 7910G+SW, CP-7940G 7905G, CP-7912G, CP-7960G 7910G, CP-7914.</li>
+  <li>Replacement power supply for most Cisco CP- 79XX series IP phones.</li>
+  <li>Compatible models include 7902G, 7910G+SW, CP-7940G 7905G, CP-7912G, CP-7960G 7910G, CP-7914.</li>
 </ul>
-</td>
-</tr>
+
+<h4>MAC Address Location</h4>
+<p>The MAC Address can be located on the bottom of your Cisco Phone. The MAC Address sticker will be designated by the work MAC in a raised format next to the correct sticker. The MAC address is always a 12 digit sequence.</p>
+
+
+<h2>Hardware and Service Pricing, Telephone Services Rates</h2>
+
+<table  class="table table-condensed table-hover">
+<caption>CWRU ITS Hardware and Service Pricing</caption>
+<thead>
+  <tr>
+    <th>Service</th>
+    <th>Price</th>
+  </tr>
+</thead>
+<tbody>
+  <tr>
+    <td>New Phone with Number</td>
+    <td></td>
+  </tr>
+  <tr>
+    <td>Add a Line</td>
+    <td></td>
+  </tr>
+  <tr>
+    <td>Move a Line</td>
+    <td></td>
+  </tr>
+  <tr>
+    <td>Reprogram replacement Cisco phone</td>
+    <td></td>
+  </tr>
+  <tr>
+    <td>Activate a Faceplate</td>
+    <td></td>
+  </tr>
 </tbody>
 </table>
-<!-- <iframe src="https://docs.google.com/forms/d/1TlL5J4nLLgHuz4HqhUJRUzRcxdC7UFEX9lsHDT0U2mw/viewform?embedded=true" width="760" height="500" frameborder="0" marginheight="0" marginwidth="0">Loading...</iframe>
- -->
+
+
+<table  class="table table-condensed table-hover">
+<caption>Telephone Services Rates</caption>
+<thead>
+  <tr>
+    <th>Service</th>
+    <th>Rate</th>
+  </tr>
+</thead>
+<tbody>
+<!-- General Services -->
+  <tr>
+    <td>Admin VOIP Voice Line (Case Department)</td>
+    <td> per month</td>
+  </tr>
+  <tr>
+    <td>Student VOIP Voice Line (Housing)</td>
+    <td> per month</td>
+  </tr>
+  <tr>
+    <td>Admin Analog Voice Line (Case Department)</td>
+    <td> per month</td>
+  </tr>
+  <tr>
+    <td>Admin Digital Voice Line (Case Department)</td>
+    <td> per month</td>
+  </tr>
+  <tr>
+    <td>Admin Analog Voice Line (non-Case Department)</td>
+    <td> per month</td>
+  </tr>
+<!-- Non-Case Labor and order fees -->
+  <tr>
+    <th>Phone Service</th>
+    <th></th>
+  </tr>
+  <tr>
+    <td>Centrex Only Service Order Processing Fee</td>
+    <td></td>
+  </tr>
+  <tr>
+    <td>Ameritech Unit Charge</td>
+    <td></td>
+  </tr>
+  <tr>
+    <td>Ameritech Labor Charge <br><strong>REGULATED</strong>, 1st 15 minutes</td>
+    <td></td>
+  </tr>
+  <tr>
+    <td>Ameritech Labor Charge <br><strong>NON-REGULATED</strong>. each additional 15 minutes</td>
+    <td></td>
+  </tr>
+  <tr>
+    <td>Ameritech Labor Charge <br><strong>REGULATED</strong>, each additional 15 minutes</td>
+    <td></td>
+  </tr>
+  <tr>
+    <td>Case Materials Fee</td>
+    <td> per order</td>
+  </tr>
+<!-- White, Yellow Pages; directory listing and Advertisements -->
+  <tr>
+    <th>Cleveland White/ Yellow Pages</th>
+    <th></th>
+  </tr>
+  <tr>
+    <td>White Pages (mini-feature caption header)</td>
+    <td></td>
+  </tr>
+  <tr>
+    <td>White Pages (extra line, internet)</td>
+    <td></td>
+  </tr>
+  <tr>
+    <td>White Pages (standard)</td>
+    <td> each line, per month</td>
+  </tr>
+  <tr>
+    <td>Yellow Pages (standard)</td>
+    <td> each line, per month</td>
+  </tr>
+  <tr>
+    <td>Yellow Pages (2-line standard)</td>
+    <td> each line, per month</td>
+  </tr>
+  <tr>
+    <td>Yellow Pages (bold type)</td>
+    <td> each line, per month</td>
+  </tr>
+<!-- Pagers -->
+  <tr>
+    <th>Pager Service</th>
+    <th></th>
+  </tr>
+  <tr>
+    <td>Monthly usage (1 year contract) Alpha-numeric/ with 800#</td>
+    <td></td>
+  </tr>
+  <tr>
+    <td>Monthly usage (1 year contract) Numeric only</td>
+    <td> each pager, per month</td>
+  </tr>
+  <tr>
+    <td>Monthly usage (1 year contract) Alpha-numeric Nationwide</td>
+    <td> each pager, per month</td>
+  </tr>
+  <tr>
+    <td>Monthly usage (1 year contract) Alpha-numeric/ Advisor</td>
+    <td> each pager, per month</td>
+  </tr>
+  <tr>
+    <td>Monthly usage (1 year contract) Alpha-numeric/ Advisor Gold</td>
+    <td> each pager, per month</td>
+  </tr>
+</tbody>
+</table>
+
+
+
+Pager Service
+
+
+Accessories / Spare - New Phones / Parts Pricing:
+Current pricing is subject to change without notice
+Cisco 7942									219.00
+Cisco 7945									260.00
+Cisco 7962									260.00
+Cisco 7965									333.00
+Cisco 8831									718.00
+Power Block for Cisco Phones									25.00
+Handset Cords									3.99
+Linksys SE1500 5 Port Switch									25.00
+__________________________________________________________________________________________
+
+Definitions:
+Centrex Analog?
+Centrex telephone lines are really just normal telephone lines which provide extended services, typically including: 
+Three-way calling for conference calls 
+Call transfer (ability to transfer a call to any telephone number) 
+Caller ID 
+Voice mail 
+
+VoIP Analog?
+For use connecting traditional analog telephones, fax machines, Talk Box, emergency telephones, elevator phones and other similar customer-premises devices to a digital telephone system or a voice over IP telephony network.
+
+VoIP?
+Voice over IP (VoIP) is a methodology and group of technologies for the delivery of voice communications and multimedia sessions over Internet Protocol (IP) networks, such as the Internet. Other terms commonly associated with VoIP are IP telephony, Internet telephony, broadband telephony, and broadband phone service.
+VoIP is used in conjunction with Cisco Model Telephones on campus
+
 
 
 <hr>
