--- a/kb-articles/kb-types_desk_phones.html
+++ b/kb-articles/kb-types_desk_phones.html
@@ -18,34 +18,14 @@
 
 <body>
 <div class="container">
+<div class="jumbotron">
+<p class="lead">Learn more about <a href="#kinds-of-phones">telephone hardware</a> that CWRU ITS recommends for use with our network, associated <a href="#phone-services">services, and rates</a><sup>*</sup>. This guide also outlines the <a href="#hardware-cost">cost of recommended hardware</a><sup>*</sup>.</p>
+<p>Need more information? Scroll to the bottom of this document for common definitions. Or for personal help, contact the ITS Service Desk anytime at 216.368.<strong>HELP</strong> (4357).</p>
+<p><sup>*</sup> prices subject to change at any time without notice</p>
+</div>
 
-
-FAQ:
-
-
-
-
-
-
-
-
-
-Where is my MAC Address located?
-What is the pricing for CWRU ITS hardware and setup fees?
-Telephone Services Rates
-What are the costs for accessories or new phones? 
-What does Centrex Analog mean?
-What does VOIP Analog Mean?
-What does VOIP mean?
-
-
-
-
-
-
-
-<h2>Telephone Hardware and Parts Descriptions</h2>
-<h4>Model 7942G</h4>
+<h2 id="kinds-of-phones">Telephone Hardware and Parts Descriptions</h2>
+<h3>Model 7942G</h3>
 <p>This phone is the standard phone for full-time faculty and staff.</p>
  
 <ul>
@@ -57,7 +37,7 @@ What does VOIP mean?
   <li>Message waiting light</li>
 </ul>
 
-<h4>Model 7945G</h4>
+<h3>Model 7945G</h3>
 
 <ul>
   <li>High-fidelity wideband audio for vibrant, lifelike conversations; Internet Low Bitrate Codec (iLBC) support for use in lossy networks</li>
@@ -66,7 +46,7 @@ What does VOIP mean?
   <li>Gigabit Ethernet connectivity</li>
 </ul>
 
-<h4>Model 7962G</h4>
+<h3>Model 7962G</h3>
 
 <ul>
   <li>Six-line set</li>
@@ -77,7 +57,7 @@ What does VOIP mean?
   <li>Message waiting light</li>
 </ul>
 
-<h4>Model 7965G</h4>
+<h3>Model 7965G</h3>
 
 <ul>
   <li>High-fidelity wideband audio for vibrant, lifelike conversations; Internet Low Bitrate Codec (iLBC) support for use in lossy networks</li>
@@ -86,7 +66,7 @@ What does VOIP mean?
   <li>Gigabit Ethernet connectivity</li>
 </ul>
 
-<h4>Cisco Unified IP Conference Phone 8831</h4>
+<h3>Cisco Unified IP Conference Phone 8831</h3>
 
 <ul>
   <li>Hands free speakerphone</li>
@@ -99,7 +79,7 @@ What does VOIP mean?
   <li>1 Year Warranty</li>
 </ul>
 
-<h4>Handset Cord</h4>
+<h3>Handset Cord</h3>
  
 <ul>
   <li>2 FT Coiled 12 Ft Uncoiled</li>
@@ -110,7 +90,7 @@ What does VOIP mean?
   <li>Medium Gray</li>
 </ul>
 
-<h4>Model 7914 Expansion Module</h4>
+<h3>Model 7914 Expansion Module</h3>
 
 <ul>
   <li>Adds fourteen buttons for either additional lines or speed dial numbers</li>
@@ -119,7 +99,7 @@ What does VOIP mean?
   <li>Model 7937 must be ordered from the vendor</li>
 </ul>
 
-<h4>Linksys SE1500 5 Port Fast Ethernet Switch</h4>
+<h3>Linksys SE1500 5 Port Fast Ethernet Switch</h3>
 
 <ul>
   <li>Linksys SE1500 10/100 5 Port Switch includes power adapter.</li>
@@ -127,32 +107,32 @@ What does VOIP mean?
   <li>Designed to meet the needs of small businesses, medium businesses and SOHO networks.</li>
 </ul>
 
-<h4>Cisco Unified Wideband Handset</h4>
+<h3>Cisco Unified Wideband Handset</h3>
 
 <ul>
   <li>Enhanced audio experience makes communications more intelligible and comfortable for the user.</li>
   <li>Sold as an accessory that can be installed on Cisco Unified IP Phone 7906G, 7911G, 7941G, 7942G, 7945G, 7941G-GE, 7961G, 7961G-GE, 7962G, 7965G, 7970G, and 7971G-GE, 7975G models.</li>
 </ul>
 
-<h4>Power Supply</h4>
+<h3>Power Supply</h3>
 
 <ul>
   <li>Replacement power supply for most Cisco CP- 79XX series IP phones.</li>
   <li>Compatible models include 7902G, 7910G+SW, CP-7940G 7905G, CP-7912G, CP-7960G 7910G, CP-7914.</li>
 </ul>
 
-<h4>MAC Address Location</h4>
+<h3>MAC Address Location</h3>
 <p>The MAC Address can be located on the bottom of your Cisco Phone. The MAC Address sticker will be designated by the work MAC in a raised format next to the correct sticker. The MAC address is always a 12 digit sequence.</p>
 
 
-<h2>Hardware and Service Pricing, Telephone Services Rates</h2>
+<h2 id="phone-services">Hardware and Service Pricing, Telephone Services Rates</h2>
 
 <table  class="table table-condensed table-hover">
 <caption>CWRU ITS Hardware and Service Pricing</caption>
 <thead>
   <tr>
     <th>Service</th>
-    <th>Price</th>
+    <th>Price or Rate</th>
   </tr>
 </thead>
 <tbody>
@@ -181,13 +161,7 @@ What does VOIP mean?
 
 
 <table  class="table table-condensed table-hover">
-<caption>Telephone Services Rates</caption>
-<thead>
-  <tr>
-    <th>Service</th>
-    <th>Rate</th>
-  </tr>
-</thead>
+<caption>Telephone Services Rates - General</caption>
 <tbody>
 <!-- General Services -->
   <tr>
@@ -210,11 +184,13 @@ What does VOIP mean?
     <td>Admin Analog Voice Line (non-Case Department)</td>
     <td> per month</td>
   </tr>
+</tbody>
+</table>
+
+<table  class="table table-condensed table-hover">
+<caption>Telephone Services Rates - Phone Service</caption>
+<tbody>
 <!-- Non-Case Labor and order fees -->
-  <tr>
-    <th>Phone Service</th>
-    <th></th>
-  </tr>
   <tr>
     <td>Centrex Only Service Order Processing Fee</td>
     <td></td>
@@ -239,11 +215,13 @@ What does VOIP mean?
     <td>Case Materials Fee</td>
     <td> per order</td>
   </tr>
+</tbody>
+</table>
+
+<table  class="table table-condensed table-hover">
+<caption>Telephone Services Rates - Cleveland White/ Yellow Pages</caption>
+<tbody>
 <!-- White, Yellow Pages; directory listing and Advertisements -->
-  <tr>
-    <th>Cleveland White/ Yellow Pages</th>
-    <th></th>
-  </tr>
   <tr>
     <td>White Pages (mini-feature caption header)</td>
     <td></td>
@@ -268,11 +246,13 @@ What does VOIP mean?
     <td>Yellow Pages (bold type)</td>
     <td> each line, per month</td>
   </tr>
+</tbody>
+</table>
+
+<table  class="table table-condensed table-hover">
+<caption>Telephone Services Rates - Pager Service</caption>
+<tbody>
 <!-- Pagers -->
-  <tr>
-    <th>Pager Service</th>
-    <th></th>
-  </tr>
   <tr>
     <td>Monthly usage (1 year contract) Alpha-numeric/ with 800#</td>
     <td></td>
@@ -297,38 +277,62 @@ What does VOIP mean?
 </table>
 
 
+<table id="hardware-cost" class="table table-condensed table-hover">
+<caption>Accessories / Spare - New Phones / Parts</caption>
+<tbody>
+<!-- Accessories / Spare - New Phones / Parts -->
+  <tr>
+    <td>Cisco 7942</td>
+    <td></td>
+  </tr>
+  <tr>
+    <td>Cisco 7945</td>
+    <td> </td>
+  </tr>
+  <tr>
+    <td>Cisco 7962</td>
+    <td> </td>
+  </tr>
+  <tr>
+    <td>Cisco 7965</td>
+    <td> </td>
+  </tr>
+  <tr>
+    <td>Cisco 8831</td>
+    <td> </td>
+  </tr>
+  <tr>
+    <td>Power block for Cisco phones</td>
+    <td> </td>
+  </tr>
+  <tr>
+    <td>Handset cords</td>
+    <td> </td>
+  </tr>
+  <tr>
+    <td>Linksys SE1500 5 port switch</td>
+    <td> </td>
+  </tr>
+</tbody>
+</table>
 
-Pager Service
+<h2>Definitions</h2>
 
+<h3>Centrex Analog</h3>
+<p>Centrex telephone lines are really just normal telephone lines which provide extended services, typically including:</p> 
+<ul>
+  <li>Three-way calling for conference calls</li>
+  <li>Call transfer (ability to transfer a call to any telephone number)</li>
+  <li>Caller ID</li>
+  <li>Voice mail</li>
+</ul>
 
-Accessories / Spare - New Phones / Parts Pricing:
-Current pricing is subject to change without notice
-Cisco 7942									219.00
-Cisco 7945									260.00
-Cisco 7962									260.00
-Cisco 7965									333.00
-Cisco 8831									718.00
-Power Block for Cisco Phones									25.00
-Handset Cords									3.99
-Linksys SE1500 5 Port Switch									25.00
-__________________________________________________________________________________________
+<h3>VoIP Analog</h3>
+<p>Use to connect traditional analog telephones, fax machines, Talk Box, emergency telephones, elevator phones and other similar customer-premises devices to a digital telephone system or a voice over IP telephony network.</p>
 
-Definitions:
-Centrex Analog?
-Centrex telephone lines are really just normal telephone lines which provide extended services, typically including: 
-Three-way calling for conference calls 
-Call transfer (ability to transfer a call to any telephone number) 
-Caller ID 
-Voice mail 
-
-VoIP Analog?
-For use connecting traditional analog telephones, fax machines, Talk Box, emergency telephones, elevator phones and other similar customer-premises devices to a digital telephone system or a voice over IP telephony network.
-
-VoIP?
-Voice over IP (VoIP) is a methodology and group of technologies for the delivery of voice communications and multimedia sessions over Internet Protocol (IP) networks, such as the Internet. Other terms commonly associated with VoIP are IP telephony, Internet telephony, broadband telephony, and broadband phone service.
-VoIP is used in conjunction with Cisco Model Telephones on campus
-
-
+<h3>VoIP</h3>
+<p>Voice over IP (VoIP) is a methodology and group of technologies for the delivery of voice communications and multimedia sessions over Internet Protocol (IP) networks, such as the Internet. Other terms commonly associated with VoIP are IP telephony, Internet telephony, broadband telephony, and broadband phone service.</p>
+<p>VoIP is used in conjunction with Cisco Model Telephones on campus.</p>
 
 <hr>
 
