tso v3 rebase dev

--- a/kb-articles/kb-types_desk_phones.html
+++ b/kb-articles/kb-types_desk_phones.html
@@ -18,11 +18,19 @@
 
 <body>
 <div class="container">
+
+
+<p>&nbsp;</p>
 <div class="jumbotron">
-<p class="lead">Learn more about <a href="#kinds-of-phones">telephone hardware</a> that CWRU ITS recommends for use with our network, associated <a href="#phone-services">services, and rates</a><sup>*</sup>. This guide also outlines the <a href="#hardware-cost">cost of recommended hardware</a><sup>*</sup>.</p>
+<h1>Telephone Services Ordering</h1>
+<p>Learn more about <a href="#kinds-of-phones">telephone hardware</a> that CWRU ITS recommends for use with our network, associated <a href="#phone-services">services, and rates</a>. This guide also outlines the <a href="#hardware-cost">cost of recommended hardware</a>.</p>
+<p>Prices subject to change at any time without notice.</p>
+<h2>More help</h2>
 <p>Need more information? Scroll to the bottom of this document for common definitions. Or for personal help, contact the ITS Service Desk anytime at 216.368.<strong>HELP</strong> (4357).</p>
-<p><sup>*</sup> prices subject to change at any time without notice</p>
 </div>
+
+
+
 
 <h2 id="kinds-of-phones">Telephone Hardware and Parts Descriptions</h2>
 <h3>Model 7942G</h3>
