--- a/kb-articles/kb-types_desk_phones.html
+++ b/kb-articles/kb-types_desk_phones.html
@@ -22,11 +22,11 @@
 
 <p>&nbsp;</p>
 <div class="jumbotron">
-<h1>Telephone Services Ordering</h1>
+<h2>Guide to Telephone Services Ordering</h2>
 <p>Learn more about <a href="#kinds-of-phones">telephone hardware</a> that CWRU ITS recommends for use with our network, associated <a href="#phone-services">services, and rates</a>. This guide also outlines the <a href="#hardware-cost">cost of recommended hardware</a>.</p>
 <p>Prices subject to change at any time without notice.</p>
 <h2>More help</h2>
-<p>Need more information? Scroll to the bottom of this document for common definitions. Or for personal help, contact the ITS Service Desk anytime at 216.368.<strong>HELP</strong> (4357).</p>
+<p>Need more information? Scroll to the bottom of this document for common <a href="#definitions">definitions</a>. Or for personal help, contact the ITS Service Desk anytime at 216.368.<strong>HELP</strong> (4357).</p>
 </div>
 
 
@@ -324,7 +324,7 @@
 </tbody>
 </table>
 
-<h2>Definitions</h2>
+<h2 id="definitions">Definitions</h2>
 
 <h3>Centrex Analog</h3>
 <p>Centrex telephone lines are really just normal telephone lines which provide extended services, typically including:</p> 
