--- a/kb-articles/kb-types_desk_phones.html
+++ b/kb-articles/kb-types_desk_phones.html
@@ -134,6 +134,7 @@
 
 
 <h2 id="phone-services">Hardware and Service Pricing, Telephone Services Rates</h2>
+<p>Prices subject to change at any time without notice.</p>
 
 <table  class="table table-condensed table-hover">
 <caption>CWRU ITS Hardware and Service Pricing</caption>
@@ -146,23 +147,23 @@
 <tbody>
   <tr>
     <td>New Phone with Number</td>
-    <td></td>
+    <td>$75.00 plus cost of phone</td>
   </tr>
   <tr>
     <td>Add a Line</td>
-    <td></td>
+    <td>$75.00</td>
   </tr>
   <tr>
     <td>Move a Line</td>
-    <td></td>
+    <td>See Phone Service below</td>
   </tr>
   <tr>
     <td>Reprogram replacement Cisco phone</td>
-    <td></td>
+    <td>$25.00</td>
   </tr>
   <tr>
     <td>Activate a Faceplate</td>
-    <td></td>
+    <td>$75.00</td>
   </tr>
 </tbody>
 </table>
@@ -174,23 +175,15 @@
 <!-- General Services -->
   <tr>
     <td>Admin VOIP Voice Line (Case Department)</td>
-    <td> per month</td>
+    <td>$23.50 per month</td>
   </tr>
   <tr>
     <td>Student VOIP Voice Line (Housing)</td>
-    <td> per month</td>
+    <td>$15.80 per month</td>
   </tr>
   <tr>
     <td>Admin Analog Voice Line (Case Department)</td>
-    <td> per month</td>
-  </tr>
-  <tr>
-    <td>Admin Digital Voice Line (Case Department)</td>
-    <td> per month</td>
-  </tr>
-  <tr>
-    <td>Admin Analog Voice Line (non-Case Department)</td>
-    <td> per month</td>
+    <td>$24.29 per month</td>
   </tr>
 </tbody>
 </table>
@@ -201,27 +194,27 @@
 <!-- Non-Case Labor and order fees -->
   <tr>
     <td>Centrex Only Service Order Processing Fee</td>
-    <td></td>
+    <td>$46.80</td>
   </tr>
   <tr>
     <td>Ameritech Unit Charge</td>
-    <td></td>
+    <td>$100.00</td>
   </tr>
   <tr>
     <td>Ameritech Labor Charge <br><strong>REGULATED</strong>, 1st 15 minutes</td>
-    <td></td>
+    <td>$25.00</td>
   </tr>
   <tr>
     <td>Ameritech Labor Charge <br><strong>NON-REGULATED</strong>. each additional 15 minutes</td>
-    <td></td>
+    <td>$25.00</td>
   </tr>
   <tr>
     <td>Ameritech Labor Charge <br><strong>REGULATED</strong>, each additional 15 minutes</td>
-    <td></td>
+    <td>$10.00</td>
   </tr>
   <tr>
     <td>Case Materials Fee</td>
-    <td> per order</td>
+    <td>$10.80 per order</td>
   </tr>
 </tbody>
 </table>
@@ -232,27 +225,27 @@
 <!-- White, Yellow Pages; directory listing and Advertisements -->
   <tr>
     <td>White Pages (mini-feature caption header)</td>
-    <td></td>
+    <td>$99.99</td>
   </tr>
   <tr>
     <td>White Pages (extra line, internet)</td>
-    <td></td>
+    <td>$13.00</td>
   </tr>
   <tr>
     <td>White Pages (standard)</td>
-    <td> each line, per month</td>
+    <td>$3.00 each line, per month</td>
   </tr>
   <tr>
     <td>Yellow Pages (standard)</td>
-    <td> each line, per month</td>
+    <td>$27.00 each line, per month</td>
   </tr>
   <tr>
     <td>Yellow Pages (2-line standard)</td>
-    <td> each line, per month</td>
+    <td>$31.00 each line, per month</td>
   </tr>
   <tr>
     <td>Yellow Pages (bold type)</td>
-    <td> each line, per month</td>
+    <td>$62.00 each line, per month</td>
   </tr>
 </tbody>
 </table>
@@ -263,23 +256,23 @@
 <!-- Pagers -->
   <tr>
     <td>Monthly usage (1 year contract) Alpha-numeric/ with 800#</td>
-    <td></td>
+    <td>$13.00</td>
   </tr>
   <tr>
     <td>Monthly usage (1 year contract) Numeric only</td>
-    <td> each pager, per month</td>
+    <td>$7.00 each pager, per month</td>
   </tr>
   <tr>
     <td>Monthly usage (1 year contract) Alpha-numeric Nationwide</td>
-    <td> each pager, per month</td>
+    <td>$25.95 each pager, per month</td>
   </tr>
   <tr>
     <td>Monthly usage (1 year contract) Alpha-numeric/ Advisor</td>
-    <td> each pager, per month</td>
+    <td>$9.00 each pager, per month</td>
   </tr>
   <tr>
     <td>Monthly usage (1 year contract) Alpha-numeric/ Advisor Gold</td>
-    <td> each pager, per month</td>
+    <td>$9.00 each pager, per month</td>
   </tr>
 </tbody>
 </table>
@@ -291,35 +284,35 @@
 <!-- Accessories / Spare - New Phones / Parts -->
   <tr>
     <td>Cisco 7942</td>
-    <td></td>
+    <td>$219.00</td>
   </tr>
   <tr>
     <td>Cisco 7945</td>
-    <td> </td>
+    <td>$260.00</td>
   </tr>
   <tr>
     <td>Cisco 7962</td>
-    <td> </td>
+    <td>$260.00</td>
   </tr>
   <tr>
     <td>Cisco 7965</td>
-    <td> </td>
+    <td>$333.00</td>
   </tr>
   <tr>
     <td>Cisco 8831</td>
-    <td> </td>
+    <td>$718.00</td>
   </tr>
   <tr>
     <td>Power block for Cisco phones</td>
-    <td> </td>
+    <td>$22.00</td>
   </tr>
   <tr>
     <td>Handset cords</td>
-    <td> </td>
+    <td>$3.99</td>
   </tr>
   <tr>
     <td>Linksys SE1500 5 port switch</td>
-    <td> </td>
+    <td>$19.00</td>
   </tr>
 </tbody>
 </table>
@@ -341,6 +334,9 @@
 <h3>VoIP</h3>
 <p>Voice over IP (VoIP) is a methodology and group of technologies for the delivery of voice communications and multimedia sessions over Internet Protocol (IP) networks, such as the Internet. Other terms commonly associated with VoIP are IP telephony, Internet telephony, broadband telephony, and broadband phone service.</p>
 <p>VoIP is used in conjunction with Cisco Model Telephones on campus.</p>
+
+<h3>Where is my MAC Address located?</h3>
+<p>The MAC Address can be located on the bottom of your Cisco Phone. The MAC Address sticker will be designated by the work MAC in a raised format next to the correct sticker. The MAC address is always a 12 digit sequence.</p>
 
 <hr>
 
